#抽象stepPanel的背景颜色获取为一个静态方法（ColorHelper.GetBackColor(value,defaultColor)）；

--- a/DimmerSystem/DimmerSystem.csproj
+++ b/DimmerSystem/DimmerSystem.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Ast\Form\MaskPanel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Ast\Helper\ColorHelper.cs" />
     <Compile Include="Ast\LibEntity\SA.cs" />
     <Compile Include="Ast\LibEntity\SAWrapper.cs" />
     <Compile Include="Ast\LibEntity\TongdaoWrapper.cs" />
